==> ARMmbed/mbed-os/targets/TARGET_ublox/TARGET_R5030/serial_api.c <==
#include "mbed_assert.h"
#include "serial_api.h"
#include "pinmap.h"
#include "cmsis.h"
#define UART1_REG (*(volatile uart_ctrl_t *) UART1_CONTROL_BASE)
#define UART2_REG (*(volatile uart_ctrl_t *) UART2_CONTROL_BASE)
#define UART0_CTRL  (1 << 3)
#define UART1_CTRL  (1 << 4)
#define UARTLP_CTRL (1 << 6)
#define UART_DATA_BITS_7 7
#define UART_DATA_BITS_8 8
#define REGISTER_DATA_BITS(x) ((x) - MIN_NUM_UART_DATA_BITS)
#define NUM_UART_STOP_BITS_1 1
#define NUM_UART_STOP_BITS_2 2
#define UART_REF_FREQ   (26000000UL)
#define DRIVER_BIT_SET(n)                      (1u<<(n))
#define DRIVER_BITS_CLR(data, mask)            ((data) & ~(mask))
#define DRIVER_BITS_SET(data, bits)            ((data) |  (bits))
#define DRIVER_BIT_MASK(n)                      (DRIVER_BIT_SET(n) - 1)
#define DRIVER_BITFIELD_MASK_(name)             (DRIVER_BIT_MASK(name##_SIZE) << (name##_OFFSET))
#define DRIVER_BITFIELD_MASK(name)              DRIVER_BITFIELD_MASK_(name)
#define DRIVER_BITFIELD_GET_(data, name)        (((data) >> name##_OFFSET) & DRIVER_BIT_MASK(name##_SIZE))
#define DRIVER_BITFIELD_GET(data, name)         DRIVER_BITFIELD_GET_(data, name)
#define DRIVER_BITFIELD_CLR(data, name)         ((data) & ~DRIVER_BITFIELD_MASK(name))
#define DRIVER_BITFIELD_VAL_(name, value)       (((value) & DRIVER_BIT_MASK(name##_SIZE)) << name##_OFFSET)
#define DRIVER_BITFIELD_VAL(name, value)        DRIVER_BITFIELD_VAL_(name, value)

void serial_init(serial_t *obj, PinName tx, PinName rx)
{    
    obj->rx_pin = rx;
    obj->tx_pin = tx;
        
    if (tx == UART1_TX) {
        serial_channel[0]=Uart1TXDxSIO_CHANNEL;
        serial_channel[1]=Uart1RXDxSIO_CHANNEL;
        config_pio_channel(serial_channel[0]);
        config_pio_channel(serial_channel[1]);
        obj->reg_base = app_ss_app_uart1;
        obj->index = IRQ_UART_ID_1;
        
    } else if (tx == UART2_TX) {    
        serial_channel[0]=Uart2TXDxSIO_CHANNEL;
        serial_channel[1]=Uart2RXDxSIO_CHANNEL;
        config_pio_channel(serial_channel[0]);
        config_pio_channel(serial_channel[1]);
        obj->reg_base = app_ss_app_uart2;
        obj->index = IRQ_UART_ID_2;
    }
    else {
        MBED_ASSERT(false);
    }
    
    /* flush FIFOs and disable interrupts */
    obj->reg_base->tffr = 0x0; 
    obj->reg_base->rffr = 0x0; 
    obj->reg_base->imrc = 0xFFFFFFF;
    //obj->reg_base->imrs = 0x201; //enable tx shift register empty and rx not empty interrupts 
    
    serial_baud(obj, 9600);
    serial_format(obj, 8, ParityNone, 1);
    
    if (tx == UART1_TX) {        
        /* The UART1 pins are the stdio pins */
        stdio_uart_inited = 1;
        stdio_uart = *obj;
    }        

}

void serial_free(serial_t *obj)
{
    if (obj->tx_pin == UART1_TX) {
        stdio_uart_inited = 0;
    }
    serial_irq_ids[obj->index] = 0;
    
    /* Release the port HW */
//    pin_function(obj->rx_pin, PIN_FUNCTION_UNCLAIMED); //pinnames and pinmap not yet implemented
//    pin_function(obj->tx_pin, PIN_FUNCTION_UNCLAIMED);
    disable_pio_channel(serial_channel[0]);
    disable_pio_channel(serial_channel[1]);     
    obj->reg_base->crc = 0xFFFFFFFF; //clear everything
    obj->reg_base->imrc = 0xFFFFFFFF; //disable all interrupts
    obj->reg_base = NULL;
}

void serial_baud(serial_t *obj, int baudrate)
{
    /*          uart baudrate calculation formula
    *   baudrate = (Pha * Fin) / OS * (Brdiv + 1) * 2^N
    *
    *   Pha: NCO phase accumulator value. Default is 0x80
    *   Fin: Uart ref clock frequency. Default is 26MHz
    *   OS: Oversampling rate. Default is 16
    *   Brdiv: BR register counter reload value ref. HAL doxygen
    *   N: Number of NCO bits i.e 8
    *   baudrate = (Pha * Fin) / 16 * (Brdiv + 1) * 2^8
    */    
    
    uint8_t nco_phase_acc_value = 0;
    uint16_t baudrate_divider_value = 0;
    uint32_t dividend = 0;
    uint32_t divisor = 0;    
    uint32_t pclk = UART_REF_FREQ;
    uint32_t req_baudrate = (uint32_t)baudrate;   
    const uint32_t nco_phase_acc_initial_shift_num = 7; 
    const uint32_t os_nco_bits_multiplier_shift_num = 12;     
    uint32_t pclk_shift_num = zeroBitNumFromLsb(pclk);
    uint32_t baudrate_shift_num = zeroBitNumFromLsb(req_baudrate);
    int32_t total_shift_num = 0; 
           
    pclk >>= pclk_shift_num;
    req_baudrate >>= baudrate_shift_num;
    
    /* calculating baudrate divider*/
    total_shift_num = (pclk_shift_num + nco_phase_acc_initial_shift_num - os_nco_bits_multiplier_shift_num - baudrate_shift_num);    
    if (total_shift_num >= 0) {
        dividend = pclk << total_shift_num;
        divisor = req_baudrate;
    }
    else {
        dividend = pclk;
        divisor = req_baudrate << (0 - total_shift_num);  
    }	
    //printf("step 1 calculate baudrate_divider_value, reqBaudrate=%d, dividend=%d, divisor=%d, totalShiftNum=%d,\n", baudrate, dividend, divisor, total_shift_num);    
    if (divisor != 0) {
        baudrate_divider_value = (dividend + (divisor >> 1)) / divisor;         
    }
    else {
        MBED_ASSERT(false);
    }
    
    /* fine tune nco phase accumulator value*/
    total_shift_num = baudrate_shift_num + os_nco_bits_multiplier_shift_num - pclk_shift_num;    
    if (total_shift_num >= 0)
    {
        dividend = (req_baudrate * baudrate_divider_value) << total_shift_num;
        divisor = pclk;
    }
    else
    {
        dividend = req_baudrate * baudrate_divider_value;
        divisor = pclk << (0 - total_shift_num);
    }
    //printf("step 2 calculate ncoPhase, reqBaudrate=%d, dividend=%d, divisor=%d, totalShiftNum=%d,\n", baudrate, dividend, divisor, total_shift_num);
    if (divisor != 0) {
        nco_phase_acc_value = (dividend + (divisor >> 1)) / divisor; 
    }
    else {
        MBED_ASSERT(false);
    }
    
    //MBED_ASSERT(!((baudrate_divider_value > DRIVER_BIT_MASK(UART_BR_BAUDRATE_SIZE)) || (nco_phase_acc_value > DRIVER_BIT_MASK(UART_NCO_NCO_PHASE_SIZE))));

    /* disable baudrate generator (uart control clear reg) */
    obj->reg_base->crc = DRIVER_BITFIELD_MASK(UART_CRC_BR_EN);
        
	/* disable DMA as we are using FIFO */
    obj->reg_base->crc = DRIVER_BITFIELD_MASK(UART_CRC_CR_RXDMA_EN);
    obj->reg_base->crc = DRIVER_BITFIELD_MASK(UART_CRC_CR_TXDMA_EN);
	
    /* set baudrate divider value */
	baudrate_divider_value--; /* the actual register value should minus 1 */
    obj->reg_base->br = DRIVER_BITFIELD_SET(obj->reg_base->br, UART_BR_BAUDRATE, baudrate_divider_value);

    /* set nco phase value */
    obj->reg_base->nco = DRIVER_BITFIELD_SET(obj->reg_base->nco, UART_NCO_NCO_PHASE, nco_phase_acc_value);
    
    /* enable baudrate generator (uart control set reg) */
    obj->reg_base->crs = DRIVER_BITFIELD_MASK(UART_CRC_BR_EN);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{    
    MBED_ASSERT((data_bits == UART_DATA_BITS_7) || (data_bits == UART_DATA_BITS_8));     
    /* Uart_IP supports 0.5, 1, 1.5 and 2 stop bits however SerialBase Class only allows 1 or 2 stop bits*/
    MBED_ASSERT((stop_bits == NUM_UART_STOP_BITS_1) || (stop_bits == NUM_UART_STOP_BITS_2));     
    MBED_ASSERT((parity == ParityNone) || (parity == ParityOdd) || (parity == ParityEven));

    uint32_t register_value=0;
    
    /* disable uart */ 
    register_value = (DRIVER_BITFIELD_MASK(UART_CRC_BR_EN) | DRIVER_BITFIELD_MASK(UART_CRC_RX_EN) | DRIVER_BITFIELD_MASK(UART_CRC_TX_EN));
    obj->reg_base->crc = register_value;
    
    /* read the existing value, change what is required and write once. This is done so that register access is only once not again and again */
    register_value = obj->reg_base->cr;
    
    /* set uart_driver_mode */
    if (parity == ParityNone) { /* Parity is disabled, set mode with parity disabled */        
        if (data_bits == UART_DATA_BITS_7) {
            register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_MODE, UART_CR_MODE_7NP_VALUE);            
        } else if (data_bits == UART_DATA_BITS_8) {
            register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_MODE, UART_CR_MODE_8NP_VALUE);            
        }       
    } else { /* Parity is enabled, set mode with parity enabled */        
        if (data_bits == UART_DATA_BITS_7) {
            register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_MODE, UART_CR_MODE_7P_VALUE);             
        } else if (data_bits == UART_DATA_BITS_8) {
            register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_MODE, UART_CR_MODE_8P_VALUE);            
        } 
                
        if (parity == ParityEven) { /* Set reg field depending upon parity even or odd */
            register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_PARITYMODE, UART_CR_PARITYMODE_EVEN_VALUE);            
        } else if (parity == ParityOdd) {
            register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_PARITYMODE, UART_CR_PARITYMODE_ODD_VALUE);            
        }        
    }
    
    /* set uart_stop_bits */
    if (stop_bits == NUM_UART_STOP_BITS_1) {
        register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_RX_STOPBITS, UART_CR_RX_STOPBITS_10_VALUE);      
        register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_TX_STOPBITS, UART_CR_RX_STOPBITS_10_VALUE);   // macro UART_CR_TX_STOPBITS_10_VALUE is not defined in uart.h but since possible values for both UART_CR_RX_STOPBITS and UART_CR_TX_STOPBITS are the same so it is not necessary.   
    } else if (stop_bits == NUM_UART_STOP_BITS_2) {
        register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_RX_STOPBITS, UART_CR_RX_STOPBITS_20_VALUE);      
        register_value = DRIVER_BITFIELD_SET(register_value, UART_CR_TX_STOPBITS, UART_CR_RX_STOPBITS_20_VALUE);           
    }
             
    /* enable uart */ 
    register_value |= (DRIVER_BITFIELD_MASK(UART_CRS_BR_EN) | DRIVER_BITFIELD_MASK(UART_CRS_RX_EN) | DRIVER_BITFIELD_MASK(UART_CRS_TX_EN));
    
    /* write final value to register */
    obj->reg_base->cr = register_value;
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    /* TODO: does uart tx/rx and baudrate generator need to be disabled? */
    obj->reg_base->crc = (/*DRIVER_BITFIELD_MASK(UART_CRC_BR_EN) | */DRIVER_BITFIELD_MASK(UART_CRC_RX_EN) | DRIVER_BITFIELD_MASK(UART_CRC_TX_EN));

    if (enable) {
        switch (irq) {
           case RxIrq:
            {
                /* rx fifo not empty interrupt enable */
                obj->reg_base->imrs = 0x01;
                obj->irq_rx_setting = IRQ_ON;
                irq_enable(obj);
            }
            break;
            case TxIrq:
            {
                /* tx shift register empty interrupt enable */
                obj->reg_base->imrs = 0x200;
                obj->irq_tx_setting = IRQ_ON;
                irq_enable(obj);
            }
            break;
            default:
            {
                MBED_ASSERT(false);
            }
            break;
        }
    } else {
        switch (irq) {
            case RxIrq:
            {
                /* rx fifo not empty interrupt disable */
                obj->reg_base->imrc = 0x01;
                obj->irq_rx_setting = IRQ_OFF;
            }
            break;
            case TxIrq:
            {
                /* tx shift register empty interrupt disable */
                obj->reg_base->imrc = 0x200;
                obj->irq_tx_setting = IRQ_OFF;
            }
            break;
            default:
            {
                MBED_ASSERT(false);
            }
            break;
        }
         if ((obj->irq_rx_setting == IRQ_OFF) && (obj->irq_tx_setting == IRQ_OFF)) {
            irq_disable(obj);
        }
    }
     /* Enable the UART again */
    obj->reg_base->crs = (DRIVER_BITFIELD_MASK(UART_CRC_BR_EN) | DRIVER_BITFIELD_MASK(UART_CRC_RX_EN) | DRIVER_BITFIELD_MASK(UART_CRC_TX_EN));
}

int serial_readable(serial_t *obj)
{
    if (DRIVER_BITFIELD_GET(obj->reg_base->rwcr, UART_RWCR_NONE) != 0) {
       return true;
    } else {    
       return false;
    }
}

int serial_writable(serial_t *obj)
{    
    /* only if this is 2 can we transmit */
    if (DRIVER_BITFIELD_GET(obj->reg_base->twcr, UART_TWCR_NONE) == 2) {
       return true;
    } else {    
       return false;
    }
}
